--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10px
+    margin-top: 10px;
     min-height: calc(100vh - 80px);
     padding-top: 24px; 
   }
@@ -83,7 +83,7 @@ body {
 .title {
     font-size: 32px;
     font-weight: 700;
-    margin: 0; /* 🔥 remove default margin */
+    margin: 0;
   }
   
   .subtitle {
