fix css production build error

--- a/src/styles.css
+++ b/src/styles.css
@@ -87,7 +87,7 @@ body {
   }
   
   .subtitle {
-    margin-top: 0px
+    margin-top: 0px;
     font-size: 14px;
     color: #6b7280;
     margin-bottom: 20px;
